syntax = "proto3";
package kv_service;
option go_package = "./service";

/* -------------------------------------------------------------------- */
message PingRequest {
  uint64 version = 1;
  bytes body = 2;
}

message PingResponse {
  uint64 version = 1;
  bytes body = 2;
}

/* -------------------------------------------------------------------- */
message Meta {
  string tenant = 1;
  optional string user = 2;
  optional string password = 3;
}

message WritePointsRequest {
  uint64 version = 1;
  Meta meta = 2;
  bytes points = 3; // flatbuffers bytes ( models::Points )
}

message WritePointsResponse {
  uint64 points_number = 1;
}

/* -------------------------------------------------------------------- */
service TSKVService {
  rpc Ping(PingRequest) returns (PingResponse) {};
  rpc WritePoints(stream WritePointsRequest) returns (stream WritePointsResponse) {};
}
